--- a/app.yaml
+++ b/app.yaml
@@ -1,2 +1,2 @@
 runtime: python310
-entrypoint: gunicorn main:app -w 4 -k uvicorn.workers.UvicornWorker
+entrypoint: gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app
